deployments/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/app: server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app.kubernetes.io/name: server
    spec:
      containers:
        - name: c
          image: saidsef/node-webserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
              name: web
          livenessProbe:
            exec:
              command:
                - pgrep
                - node
            initialDelaySeconds: 5
            failureThreshold: 2
            timeoutSeconds: 1
            successThreshold: 1
          readinessProbe:
            httpGet:
              port: 8080
              path: "/"
              scheme: "HTTP"
            initialDelaySeconds: 3
            failureThreshold: 2
            timeoutSeconds: 1
            successThreshold: 1
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 20m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            # user/group: nobody
            runAsGroup: 65534
            runAsUser: 65534
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
