deployments/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
    tier: frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: server
